...
 * ```tsx
 * <Button onPress={() => console.log('pressed')}>
 * <Text>Click me</Text>
 * </Button>
 * ```
 */
export const Button = React.memo(
  React.forwardRef<View, ButtonProps>(function Button(props, ref) {
    const { children, style, ...otherProps } = props;

    const internalRef = React.useRef<View>(null);

    const {
...
